kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_rw_cursor/too_many_args.stderr
error: Expected at most 2 arguments, got 3.
 --> $DIR/too_many_args.rs:5:28
  |
5 | #[require_binary_rw_cursor(C, self, X)]
  |                            ^^^^^^^^^^
